boostrap Flower AI project & start training on Roboflow data

--- a/thesis/base_model_training.ipynb
+++ b/thesis/base_model_training.ipynb
@@ -1,6 +1,84 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://github.com/roboflow/notebooks/blob/main/notebooks/how-to-use-rf100.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading Roboflow workspace...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<roboflow.core.workspace.Workspace at 0x108c766d0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from roboflow import Roboflow\n",
+    "\n",
+    "rf = Roboflow(api_key=\"P2w2decpA8QerBqtfOZE\")\n",
+    "wsp = rf.workspace(\"roboflow-100\")\n",
+    "wsp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "projects = wsp.project_list\n",
+    "with open(\"roboflow_projects.json\", 'w') as json_file:\n",
+    "    json.dump(wsp.project_list, json_file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Load the annotations\n",
+    "with open(dataset.location + \"/train/_annotations.coco.json\") as f:\n",
+    "    annotations = json.load(f)\n",
+    "\n",
+    "# Filter for aerial category\n",
+    "aerial_annotations = [ann for ann in annotations['annotations'] if ann['category_id'] == aerial_category_id]\n",
+    "\n",
+    "# Save filtered annotations\n",
+    "with open(dataset.location + \"/train/_annotations_aerial.coco.json\", 'w') as f:\n",
+    "    json.dump(aerial_annotations, f)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -197,7 +275,193 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# https://www.tensorflow.org/federated/tutorials/federated_learning_for_image_classification"
+    "Transfer learning with THhub\n",
+    "https://www.tensorflow.org/tutorials/images/transfer_learning_with_hub\n",
+    "\n",
+    "TF for image classification # https://www.tensorflow.org/federated/tutorials/federated_learning_for_image_classification\n",
+    "\n",
+    "Datasets: https://universe.roboflow.com/yolo-experiment-sara-rahimi/aerial-images-vugjs/dataset/3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tensorflow_hub\n",
+      "  Downloading tensorflow_hub-0.16.1-py2.py3-none-any.whl.metadata (1.3 kB)\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /usr/local/lib/python3.11/site-packages (from tensorflow_hub) (1.26.0)\n",
+      "Requirement already satisfied: protobuf>=3.19.6 in /usr/local/lib/python3.11/site-packages (from tensorflow_hub) (4.25.3)\n",
+      "Collecting tf-keras>=2.14.1 (from tensorflow_hub)\n",
+      "  Downloading tf_keras-2.18.0-py3-none-any.whl.metadata (1.6 kB)\n",
+      "INFO: pip is looking at multiple versions of tf-keras to determine which version is compatible with other requirements. This could take a while.\n",
+      "  Downloading tf_keras-2.17.0-py3-none-any.whl.metadata (1.6 kB)\n",
+      "  Downloading tf_keras-2.16.0-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting tensorflow<2.17,>=2.16 (from tf-keras>=2.14.1->tensorflow_hub)\n",
+      "  Downloading tensorflow-2.16.2-cp311-cp311-macosx_10_15_x86_64.whl.metadata (4.1 kB)\n",
+      "Requirement already satisfied: absl-py>=1.0.0 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (2.1.0)\n",
+      "Requirement already satisfied: astunparse>=1.6.0 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (1.6.3)\n",
+      "Requirement already satisfied: flatbuffers>=23.5.26 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (24.3.25)\n",
+      "Requirement already satisfied: gast!=0.5.0,!=0.5.1,!=0.5.2,>=0.2.1 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (0.5.4)\n",
+      "Requirement already satisfied: google-pasta>=0.1.1 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (0.2.0)\n",
+      "Requirement already satisfied: h5py>=3.10.0 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (3.10.0)\n",
+      "Requirement already satisfied: libclang>=13.0.0 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (18.1.1)\n",
+      "Collecting ml-dtypes~=0.3.1 (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub)\n",
+      "  Downloading ml_dtypes-0.3.2-cp311-cp311-macosx_10_9_universal2.whl.metadata (20 kB)\n",
+      "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (3.3.0)\n",
+      "Requirement already satisfied: packaging in /Users/olenapleshan/Library/Python/3.11/lib/python/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (24.1)\n",
+      "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (2.32.3)\n",
+      "Requirement already satisfied: setuptools in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (74.1.2)\n",
+      "Requirement already satisfied: six>=1.12.0 in /Users/olenapleshan/Library/Python/3.11/lib/python/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (1.16.0)\n",
+      "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (2.4.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.6.6 in /Users/olenapleshan/Library/Python/3.11/lib/python/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (4.12.2)\n",
+      "Requirement already satisfied: wrapt>=1.11.0 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (1.14.1)\n",
+      "Requirement already satisfied: grpcio<2.0,>=1.24.3 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (1.62.1)\n",
+      "Collecting tensorboard<2.17,>=2.16 (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub)\n",
+      "  Downloading tensorboard-2.16.2-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Collecting keras>=3.0.0 (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub)\n",
+      "  Downloading keras-3.7.0-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Requirement already satisfied: tensorflow-io-gcs-filesystem>=0.23.1 in /usr/local/lib/python3.11/site-packages (from tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (0.36.0)\n",
+      "Requirement already satisfied: wheel<1.0,>=0.23.0 in /usr/local/lib/python3.11/site-packages (from astunparse>=1.6.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (0.44.0)\n",
+      "Requirement already satisfied: rich in /usr/local/lib/python3.11/site-packages (from keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (13.7.1)\n",
+      "Collecting namex (from keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub)\n",
+      "  Downloading namex-0.0.8-py3-none-any.whl.metadata (246 bytes)\n",
+      "Collecting optree (from keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub)\n",
+      "  Downloading optree-0.13.1-cp311-cp311-macosx_10_9_universal2.whl.metadata (47 kB)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/site-packages (from requests<3,>=2.21.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (2024.8.30)\n",
+      "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.11/site-packages (from tensorboard<2.17,>=2.16->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (3.6)\n",
+      "Requirement already satisfied: tensorboard-data-server<0.8.0,>=0.7.0 in /usr/local/lib/python3.11/site-packages (from tensorboard<2.17,>=2.16->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (0.7.2)\n",
+      "Requirement already satisfied: werkzeug>=1.0.1 in /usr/local/lib/python3.11/site-packages (from tensorboard<2.17,>=2.16->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (3.0.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in /usr/local/lib/python3.11/site-packages (from werkzeug>=1.0.1->tensorboard<2.17,>=2.16->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (2.1.5)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.11/site-packages (from rich->keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/olenapleshan/Library/Python/3.11/lib/python/site-packages (from rich->keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (2.18.0)\n",
+      "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.11/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras>=2.14.1->tensorflow_hub) (0.1.2)\n",
+      "Downloading tensorflow_hub-0.16.1-py2.py3-none-any.whl (30 kB)\n",
+      "Downloading tf_keras-2.16.0-py3-none-any.whl (1.7 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.7/1.7 MB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading tensorflow-2.16.2-cp311-cp311-macosx_10_15_x86_64.whl (259.6 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m259.6/259.6 MB\u001b[0m \u001b[31m4.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:02\u001b[0m\n",
+      "\u001b[?25hDownloading keras-3.7.0-py3-none-any.whl (1.2 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading ml_dtypes-0.3.2-cp311-cp311-macosx_10_9_universal2.whl (389 kB)\n",
+      "Downloading tensorboard-2.16.2-py3-none-any.whl (5.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.5/5.5 MB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading namex-0.0.8-py3-none-any.whl (5.8 kB)\n",
+      "Downloading optree-0.13.1-cp311-cp311-macosx_10_9_universal2.whl (589 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m589.6/589.6 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: namex, optree, ml-dtypes, tensorboard, keras, tensorflow, tf-keras, tensorflow_hub\n",
+      "  Attempting uninstall: ml-dtypes\n",
+      "    Found existing installation: ml-dtypes 0.2.0\n",
+      "    Uninstalling ml-dtypes-0.2.0:\n",
+      "      Successfully uninstalled ml-dtypes-0.2.0\n",
+      "  Attempting uninstall: tensorboard\n",
+      "    Found existing installation: tensorboard 2.14.1\n",
+      "    Uninstalling tensorboard-2.14.1:\n",
+      "      Successfully uninstalled tensorboard-2.14.1\n",
+      "  Attempting uninstall: keras\n",
+      "    Found existing installation: keras 2.14.0\n",
+      "    Uninstalling keras-2.14.0:\n",
+      "      Successfully uninstalled keras-2.14.0\n",
+      "  Attempting uninstall: tensorflow\n",
+      "    Found existing installation: tensorflow 2.14.1\n",
+      "    Uninstalling tensorflow-2.14.1:\n",
+      "      Successfully uninstalled tensorflow-2.14.1\n",
+      "Successfully installed keras-3.7.0 ml-dtypes-0.3.2 namex-0.0.8 optree-0.13.1 tensorboard-2.16.2 tensorflow-2.16.2 tensorflow_hub-0.16.1 tf-keras-2.16.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install tensorflow_hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-12-01 21:09:39.207507: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "import PIL.Image as Image\n",
+    "import matplotlib.pylab as plt\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_hub as hub\n",
+    "\n",
+    "import datetime\n",
+    "\n",
+    "# %load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mobilenet_v2 =\"https://tfhub.dev/google/tf2-preview/mobilenet_v2/classification/4\"\n",
+    "inception_v3 = \"https://tfhub.dev/google/imagenet/inception_v3/classification/5\"\n",
+    "\n",
+    "classifier_model = mobilenet_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMAGE_SHAPE = (224, 224)\n",
+    "\n",
+    "classifier = tf.keras.Sequential([\n",
+    "    hub.KerasLayer(classifier_model, input_shape=IMAGE_SHAPE+(3,))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m grace_hopper \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mget_file(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://storage.googleapis.com/download.tensorflow.org/example_images/grace_hopper.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m grace_hopper \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mopen(grace_hopper)\u001b[38;5;241m.\u001b[39mresize(IMAGE_SHAPE)\n\u001b[1;32m      3\u001b[0m grace_hopper\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "grace_hopper = tf.keras.utils.get_file('image.jpg','https://storage.googleapis.com/download.tensorflow.org/example_images/grace_hopper.jpg')\n",
+    "grace_hopper = Image.open(grace_hopper).resize(IMAGE_SHAPE)\n",
+    "grace_hopper"
    ]
   },
   {
