--- a/thesis/federated_dev.ipynb
+++ b/thesis/federated_dev.ipynb
@@ -2,123 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting tensorflow-federated\n",
-      "  Downloading tensorflow_federated-0.48.0-py2.py3-none-any.whl.metadata (3.9 kB)\n",
-      "Collecting absl-py==1.*,>=1.0 (from tensorflow-federated)\n",
-      "  Downloading absl_py-1.4.0-py3-none-any.whl.metadata (2.3 kB)\n",
-      "Collecting attrs~=21.4 (from tensorflow-federated)\n",
-      "  Using cached attrs-21.4.0-py2.py3-none-any.whl.metadata (9.8 kB)\n",
-      "Collecting cachetools~=3.1 (from tensorflow-federated)\n",
-      "  Using cached cachetools-3.1.1-py2.py3-none-any.whl.metadata (4.6 kB)\n",
-      "Collecting dm-tree==0.1.7 (from tensorflow-federated)\n",
-      "  Downloading dm-tree-0.1.7.tar.gz (35 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting dp-accounting==0.3.0 (from tensorflow-federated)\n",
-      "  Downloading dp_accounting-0.3.0-py3-none-any.whl.metadata (1.7 kB)\n",
-      "Collecting farmhashpy==0.4.0 (from tensorflow-federated)\n",
-      "  Using cached farmhashpy-0.4.0.tar.gz (98 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hRequirement already satisfied: grpcio~=1.46 in /usr/local/lib/python3.11/site-packages (from tensorflow-federated) (1.62.1)\n",
-      "INFO: pip is looking at multiple versions of tensorflow-federated to determine which version is compatible with other requirements. This could take a while.\n",
-      "Collecting tensorflow-federated\n",
-      "  Downloading tensorflow_federated-0.47.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.46.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.45.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.44.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.43.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.42.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.41.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "INFO: pip is still looking at multiple versions of tensorflow-federated to determine which version is compatible with other requirements. This could take a while.\n",
-      "  Downloading tensorflow_federated-0.40.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.39.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.38.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.37.0-py2.py3-none-any.whl.metadata (3.8 kB)\n",
-      "  Downloading tensorflow_federated-0.36.0-py2.py3-none-any.whl.metadata (3.7 kB)\n",
-      "INFO: This is taking longer than usual. You might need to provide the dependency resolver with stricter constraints to reduce runtime. See https://pip.pypa.io/warnings/backtracking for guidance. If you want to abort this run, press Ctrl + C.\n",
-      "  Downloading tensorflow_federated-0.34.0-py2.py3-none-any.whl.metadata (3.7 kB)\n",
-      "  Using cached tensorflow_federated-0.33.0-py2.py3-none-any.whl.metadata (3.4 kB)\n",
-      "Collecting absl-py~=1.0.0 (from tensorflow-federated)\n",
-      "  Using cached absl_py-1.0.0-py3-none-any.whl.metadata (2.3 kB)\n",
-      "Collecting dm-tree~=0.1.7 (from tensorflow-federated)\n",
-      "  Using cached dm_tree-0.1.8-cp311-cp311-macosx_10_9_x86_64.whl.metadata (1.9 kB)\n",
-      "Collecting grpcio~=1.46.3 (from tensorflow-federated)\n",
-      "  Using cached grpcio-1.46.5.tar.gz (21.8 MB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting tensorflow-federated\n",
-      "  Using cached tensorflow_federated-0.32.0-py2.py3-none-any.whl.metadata (3.4 kB)\n",
-      "  Using cached tensorflow_federated-0.31.0-py2.py3-none-any.whl.metadata (3.4 kB)\n",
-      "  Using cached tensorflow_federated-0.30.0-py2.py3-none-any.whl.metadata (3.4 kB)\n",
-      "Collecting attrs~=21.2.0 (from tensorflow-federated)\n",
-      "  Using cached attrs-21.2.0-py2.py3-none-any.whl.metadata (9.1 kB)\n",
-      "Collecting tensorflow-federated\n",
-      "  Using cached tensorflow_federated-0.29.0-py2.py3-none-any.whl.metadata (3.4 kB)\n",
-      "  Using cached tensorflow_federated-0.28.0-py2.py3-none-any.whl.metadata (3.4 kB)\n",
-      "  Using cached tensorflow_federated-0.27.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "Collecting grpcio~=1.34.0 (from tensorflow-federated)\n",
-      "  Using cached grpcio-1.34.1.tar.gz (21.1 MB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting jax~=0.2.27 (from tensorflow-federated)\n",
-      "  Using cached jax-0.2.28.tar.gz (887 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting tensorflow-federated\n",
-      "  Using cached tensorflow_federated-0.26.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "  Using cached tensorflow_federated-0.24.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "  Using cached tensorflow_federated-0.23.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "  Using cached tensorflow_federated-0.22.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "  Using cached tensorflow_federated-0.21.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "  Using cached tensorflow_federated-0.20.0-py2.py3-none-any.whl.metadata (3.6 kB)\n",
-      "  Using cached tensorflow_federated-0.19.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "Collecting absl-py~=0.10 (from tensorflow-federated)\n",
-      "  Using cached absl_py-0.15.0-py3-none-any.whl.metadata (2.4 kB)\n",
-      "Collecting attrs~=19.3.0 (from tensorflow-federated)\n",
-      "  Using cached attrs-19.3.0-py2.py3-none-any.whl.metadata (9.0 kB)\n",
-      "Collecting tensorflow-federated\n",
-      "  Using cached tensorflow_federated-0.18.0-py2.py3-none-any.whl.metadata (3.5 kB)\n",
-      "Collecting grpcio~=1.32.0 (from tensorflow-federated)\n",
-      "  Using cached grpcio-1.32.0.tar.gz (20.8 MB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting h5py~=2.10.0 (from tensorflow-federated)\n",
-      "  Using cached h5py-2.10.0.tar.gz (301 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25hCollecting tensorflow-federated\n",
-      "  Using cached tensorflow_federated-0.17.0-py2.py3-none-any.whl.metadata (3.4 kB)\n",
-      "Collecting absl-py~=0.9.0 (from tensorflow-federated)\n",
-      "  Using cached absl-py-0.9.0.tar.gz (104 kB)\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25lerror\n",
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mpython setup.py egg_info\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[6 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m Traceback (most recent call last):\n",
-      "  \u001b[31m   \u001b[0m   File \"<string>\", line 2, in <module>\n",
-      "  \u001b[31m   \u001b[0m   File \"<pip-setuptools-caller>\", line 34, in <module>\n",
-      "  \u001b[31m   \u001b[0m   File \"/private/var/folders/z7/8n2dlxg16tggjrtnz6s70x180000gn/T/pip-install-zba266qd/absl-py_065c8f4ca84441ab8a0174e8d0857105/setup.py\", line 34, in <module>\n",
-      "  \u001b[31m   \u001b[0m     raise RuntimeError('Python version 2.7 or 3.4+ is required.')\n",
-      "  \u001b[31m   \u001b[0m RuntimeError: Python version 2.7 or 3.4+ is required.\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[?25h\u001b[1;31merror\u001b[0m: \u001b[1mmetadata-generation-failed\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m Encountered error while generating package metadata.\n",
-      "\u001b[31m╰─>\u001b[0m See above for output.\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: This is an issue with the package mentioned above, not pip.\n",
-      "\u001b[1;36mhint\u001b[0m: See above for details.\n",
+      "Requirement already satisfied: flwr in /usr/local/lib/python3.11/site-packages (1.12.0)\n",
+      "Requirement already satisfied: cryptography<43.0.0,>=42.0.4 in /usr/local/lib/python3.11/site-packages (from flwr) (42.0.8)\n",
+      "Requirement already satisfied: grpcio!=1.64.2,!=1.65.1,!=1.65.2,!=1.65.4,!=1.65.5,!=1.66.0,!=1.66.1,<2.0.0,>=1.60.0 in /usr/local/lib/python3.11/site-packages (from flwr) (1.62.1)\n",
+      "Requirement already satisfied: iterators<0.0.3,>=0.0.2 in /usr/local/lib/python3.11/site-packages (from flwr) (0.0.2)\n",
+      "Requirement already satisfied: numpy<2.0.0,>=1.21.0 in /usr/local/lib/python3.11/site-packages (from flwr) (1.26.0)\n",
+      "Requirement already satisfied: pathspec<0.13.0,>=0.12.1 in /usr/local/lib/python3.11/site-packages (from flwr) (0.12.1)\n",
+      "Requirement already satisfied: protobuf<5.0.0,>=4.25.2 in /usr/local/lib/python3.11/site-packages (from flwr) (4.25.3)\n",
+      "Requirement already satisfied: pycryptodome<4.0.0,>=3.18.0 in /usr/local/lib/python3.11/site-packages (from flwr) (3.21.0)\n",
+      "Requirement already satisfied: tomli<3.0.0,>=2.0.1 in /usr/local/lib/python3.11/site-packages (from flwr) (2.1.0)\n",
+      "Requirement already satisfied: tomli-w<2.0.0,>=1.0.0 in /usr/local/lib/python3.11/site-packages (from flwr) (1.1.0)\n",
+      "Requirement already satisfied: typer<0.13.0,>=0.12.5 in /usr/local/lib/python3.11/site-packages (from flwr) (0.12.5)\n",
+      "Requirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.11/site-packages (from cryptography<43.0.0,>=42.0.4->flwr) (1.17.1)\n",
+      "Requirement already satisfied: click>=8.0.0 in /usr/local/lib/python3.11/site-packages (from typer<0.13.0,>=0.12.5->flwr) (8.1.7)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/olenapleshan/Library/Python/3.11/lib/python/site-packages (from typer<0.13.0,>=0.12.5->flwr) (4.12.2)\n",
+      "Requirement already satisfied: shellingham>=1.3.0 in /usr/local/lib/python3.11/site-packages (from typer<0.13.0,>=0.12.5->flwr) (1.5.4)\n",
+      "Requirement already satisfied: rich>=10.11.0 in /usr/local/lib/python3.11/site-packages (from typer<0.13.0,>=0.12.5->flwr) (13.7.1)\n",
+      "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/site-packages (from cffi>=1.12->cryptography<43.0.0,>=42.0.4->flwr) (2.22)\n",
+      "Requirement already satisfied: markdown-it-py>=2.2.0 in /usr/local/lib/python3.11/site-packages (from rich>=10.11.0->typer<0.13.0,>=0.12.5->flwr) (3.0.0)\n",
+      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/olenapleshan/Library/Python/3.11/lib/python/site-packages (from rich>=10.11.0->typer<0.13.0,>=0.12.5->flwr) (2.18.0)\n",
+      "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.11/site-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<0.13.0,>=0.12.5->flwr) (0.1.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip install --ignore-requires-python --upgrade tensorflow-federated "
+    "pip install flwr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-19 22:54:12.015645: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import flwr\n",
+    "\n",
+    "print(flwr.__version__)"
    ]
   },
   {
@@ -126,17 +69,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import collections\n",
-    "\n",
-    "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "import tensorflow_federated as tff\n",
-    "\n",
-    "np.random.seed(0)\n",
-    "\n",
-    "tff.federated_computation(lambda: 'Hello, World!')()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
