add microcontroller deployment, model and testing code;

--- a/thesis/graphs/results.ipynb
+++ b/thesis/graphs/results.ipynb
@@ -71,6 +71,66 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Performance Radar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = [\n",
+    "    \"Memory Efficiency\",\n",
+    "    \"Network Speed\",\n",
+    "    \"Disk I/O Efficiency\",\n",
+    "    \"CPU Threads\",\n",
+    "    \"CPU Utilization\"\n",
+    "]\n",
+    "\n",
+    "rockpi_scores = [9, 9, 9, 9, 9]\n",
+    "raspi_scores = [6, 7, 5, 6, 6]\n",
+    "\n",
+    "num_vars = len(metrics)\n",
+    "\n",
+    "angles = np.linspace(0, 2 * np.pi, num_vars, endpoint=False).tolist()\n",
+    "\n",
+    "rockpi_scores += rockpi_scores[:1]\n",
+    "raspi_scores += raspi_scores[:1]\n",
+    "angles += angles[:1]\n",
+    "\n",
+    "# Plot\n",
+    "fig, ax = plt.subplots(figsize=(8, 8), subplot_kw=dict(polar=True))\n",
+    "\n",
+    "ax.plot(angles, rockpi_scores, label=\"ROCKPI\", linewidth=2)\n",
+    "ax.fill(angles, rockpi_scores, alpha=0.25)\n",
+    "\n",
+    "ax.plot(angles, raspi_scores, label=\"RASPI\", linewidth=2)\n",
+    "ax.fill(angles, raspi_scores, alpha=0.25)\n",
+    "\n",
+    "ax.set_thetagrids(np.degrees(angles[:-1]), metrics)\n",
+    "plt.yticks(range(1, 11), color=\"grey\", size=8)\n",
+    "ax.set_ylim(0, 10)\n",
+    "\n",
+    "plt.title(\"Performance Comparison: ROCKPI vs RASPI\", size=15, y=1.05)\n",
+    "plt.legend(loc=\"upper right\", bbox_to_anchor=(1.2, 1.1))\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
